@startuml
package calc.py <<Node>> {
    class Calculator {
        __init__(clear)
        clear()
        calc()
        proceed(item)
        _clear()
        _del()
        _result()
        _equals()
        _help()
        _add()
        _memory(key)
        _print_mem()
        _save()
        _run()
        _shutdown()
        _proceed_input()
    }
    class bcolors {
        RESULT : str
        DEFAULT : str
    }
    class Main << (M,gold) >> {
        _no_mem_values : []
        help_text : str
        WELCOME : str
        welcome(clear)
        is_number(s)
        is_valid_operator(s)
        hook() : "Main Method"
    }
}

package calc_model.py <<Node>> {
    class _valid_operators << list >>
    class _valid_operators_d << dictionairy >>

    class calc_model {
        calc_term(terms)
        parse_term(terms)
    }
    abstract term << (A,lightred) >>{
        value() : abstract
    }
    class val_term{
        self.val : float
        __init__(val)
        value()
    }
    abstract lr_term << (A,lightred) >>{
        __init__(terms, calc_model_instance)
    }
    class r_term << (A,lightred) >>{
        __init__(terms, calc_model_instance)
    }
    class add_term{
        char : str
        value()
    }
    class sub_term{
        char : str
        value()
    }
    class multi_term{
        char : str
        value()
    }
    class div_term{
        char : str
        value()
    }
    class exp_term{
        char : str
        value()
    }
    class sqrt_term{
        char : str
        value()
    }
}

calc.py .down.> calc_model.py : import calc_model as model

val_term -down-|> term
lr_term -down-|> term
r_term -down-|> term
add_term -down-|> lr_term
sub_term -down-|> lr_term
multi_term -down-|> lr_term
div_term -down-|> lr_term
exp_term -down-|> lr_term
sqrt_term -down-|> r_term
calc_model .....> val_term : uses
calc_model .....> add_term : uses
calc_model .....> sub_term : uses
calc_model .....> multi_term : uses
calc_model .....> div_term : uses
calc_model .....> exp_term : uses
calc_model .....> sqrt_term : uses
calc_model ..> _valid_operators : uses
calc_model ..> _valid_operators_d : uses

Calculator ....> calc_model : uses
Calculator .right.> bcolors : uses
Calculator ....> _valid_operators : uses
Main .right.> Calculator : uses

@enduml
